# CMU-Task

./: README.md
Rotations/: rotations
latex_files/: assignment_3.aux  assignment_3.blg  assignment_3.dvi  assignment_3.out  assignment_3.tex
libelas/: CMakeCache.txt  Makefile  cmake_install.cmake  elas
libelas/img/: aloe_left_disp.pgm  aloe_right_disp.pgm  cones_left_disp.pgm  cones_right_disp.pgm  raindeer_left_disp.pgm  raindeer_right_disp.pgm  urban1_left_disp.pgm  urban1_right_disp.pgm  urban2_left_disp.pgm  urban2_right_disp.pgm  urban3_left_disp.pgm  urban3_right_disp.pgm  urban4_left_disp.pgm  urban4_right_disp.pgm
plane_segmentation_tutorial/: CMakeLists.txt~
plane_segmentation_tutorial/launch/: plane_seg.rviz  sample.launch
plane_segmentation_tutorial/src/: CMakeLists.txt  simplePlaneFitting.cpp
stereo_task/: CMakeLists.txt  package.xml  readme.md
stereo_task/data/: 1000_disp.pgm  1000_left_gray.pgm  1000_right_gray.pgm  1040_disp.pgm  1040_left.pgm  1040_left_gray.pgm  1040_right.pgm  1040_right_gray.pgm  1080_disp.pgm  1080_left.pgm  1080_left_gray.pgm  1080_right.pgm  1080_right_gray.pgm  1120_disp.pgm  1120_left.pgm  1120_left_gray.pgm  1120_right.pgm  1120_right_gray.pgm  1160_disp.pgm  1160_left.pgm  1160_left_gray.pgm  1160_right.pgm  1160_right_gray.pgm  pair01.pcd  pair02.pcd  pair03.pcd  pair04.pcd  pair05.pcd
stereo_task/src/: .#converttoPGM.cpp  convertPGM  converttoPGM.cpp  main.cpp
